# PC---TIF---HPX

./: README.md
HPX/: CMakeLists.txt  combinado_multiplicacion_matrices.py  difusion_calor.cpp  difusion_calor.py  difusion_calor_resultados_hpx.csv  montecarlo.cpp  montecarlo.py  multiplicacion_matrices.cpp  multiplicacion_matrices.py
OpenMP/: README.md  run_all.sh
OpenMP/data/: heat_results.csv  matrix_times_4_threads.csv  matrix_times_8_threads.csv  pi.csv  pi_16_threads.csv  pi_4_threads.csv  pi_8_threads.csv
OpenMP/src/: heat.c  heat.py  matrix.c  matrix.py  pi.c  pi.py
Pthreads/: heat.c  matrix.c  pi.c
Pthreads/resultados/: heat_results_dense.csv  matrix_times_4_threads.csv  matrix_times_8_threads.csv  pi_16_threads.csv  pi_4_threads.csv  pi_8_threads.csv
